Etapa3/parser.out
Created by PLY version 3.7 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> PROGRAM
Rule 1     PROGRAM -> DEC_LIST_INIT INST_EXE
Rule 2     PROGRAM -> INST_EXE
Rule 3     DEC_LIST_INIT -> TkCreate DEC_LIST
Rule 4     DEC_LIST -> DEC DEC_LIST
Rule 5     DEC_LIST -> DEC
Rule 6     DEC -> TIPO TkBot ID_LIST COMP_LIST TkEnd
Rule 7     TIPO -> TkBool
Rule 8     TIPO -> TkChar
Rule 9     TIPO -> TkInt
Rule 10    ID_LIST -> ID TkComa ID_LIST
Rule 11    ID_LIST -> ID
Rule 12    ID -> TkIdent
Rule 13    COMP_LIST -> COMP COMP_LIST
Rule 14    COMP_LIST -> empty
Rule 15    COMP -> TkOn EXPR TkDosPuntos INST_BOT_LIST TkEnd
Rule 16    COMP -> TkOn STATE TkDosPuntos INST_BOT_LIST TkEnd
Rule 17    STATE -> TkActivation
Rule 18    STATE -> TkDeactivation
Rule 19    STATE -> TkDefault
Rule 20    INST_BOT_LIST -> INST_BOT INST_BOT_LIST
Rule 21    INST_BOT_LIST -> INST_BOT
Rule 22    INST_BOT -> TkStore EXPR TkPunto
Rule 23    INST_BOT -> TkCollect TkPunto
Rule 24    INST_BOT -> TkCollect TkAs ID TkPunto
Rule 25    INST_BOT -> TkDrop EXPR TkPunto
Rule 26    INST_BOT -> DIR TkPunto
Rule 27    INST_BOT -> DIR EXPR TkPunto
Rule 28    INST_BOT -> TkRead TkPunto
Rule 29    INST_BOT -> TkRead TkAs ID TkPunto
Rule 30    INST_BOT -> TkSend TkPunto
Rule 31    INST_BOT -> TkRecieve TkPunto
Rule 32    INST_BOT -> TkRecieve EXPR TkPunto
Rule 33    DIR -> TkLeft
Rule 34    DIR -> TkRight
Rule 35    DIR -> TkUp
Rule 36    DIR -> TkDown
Rule 37    INST_EXE -> TkExecute INST_CONT_LIST TkEnd
Rule 38    INST_CONT_LIST -> INST_CONT INST_CONT_LIST
Rule 39    INST_CONT_LIST -> INST_CONT
Rule 40    INST_CONT -> TkActivate ID_LIST TkPunto
Rule 41    INST_CONT -> TkAdvance ID_LIST TkPunto
Rule 42    INST_CONT -> TkDeactivate ID_LIST TkPunto
Rule 43    INST_CONT -> TkIf EXPR TkDosPuntos INST_CONT_LIST TkElse TkDosPuntos INST_CONT_LIST TkEnd
Rule 44    INST_CONT -> TkIf EXPR TkDosPuntos INST_CONT_LIST TkEnd
Rule 45    INST_CONT -> TkWhile EXPR TkDosPuntos INST_CONT_LIST TkEnd
Rule 46    INST_CONT -> PROGRAM
Rule 47    EXPR -> TkNum
Rule 48    EXPR -> TkIdent
Rule 49    EXPR -> TkCaracter
Rule 50    EXPR -> TkMe
Rule 51    EXPR -> TkParAbre EXPR TkParCierra
Rule 52    EXPR -> TkNegacion EXPR
Rule 53    EXPR -> TkResta EXPR
Rule 54    EXPR -> EXPR TkSuma EXPR
Rule 55    EXPR -> EXPR TkResta EXPR
Rule 56    EXPR -> EXPR TkMult EXPR
Rule 57    EXPR -> EXPR TkDiv EXPR
Rule 58    EXPR -> EXPR TkMod EXPR
Rule 59    EXPR -> TkTrue
Rule 60    EXPR -> TkFalse
Rule 61    EXPR -> EXPR TkConjuncion EXPR
Rule 62    EXPR -> EXPR TkDisyuncion EXPR
Rule 63    EXPR -> EXPR TkIgual EXPR
Rule 64    EXPR -> EXPR TkMayor EXPR
Rule 65    EXPR -> EXPR TkMayorIgual EXPR
Rule 66    EXPR -> EXPR TkMenor EXPR
Rule 67    EXPR -> EXPR TkMenorIgual EXPR
Rule 68    EXPR -> EXPR TkDistinto EXPR
Rule 69    empty -> <empty>

Terminals, with rules where they appear

TkActivate           : 40
TkActivation         : 17
TkAdvance            : 41
TkAs                 : 24 29
TkBool               : 7
TkBot                : 6
TkCaracter           : 49
TkChar               : 8
TkCollect            : 23 24
TkComa               : 10
TkConjuncion         : 61
TkCreate             : 3
TkDeactivate         : 42
TkDeactivation       : 18
TkDefault            : 19
TkDistinto           : 68
TkDisyuncion         : 62
TkDiv                : 57
TkDosPuntos          : 15 16 43 43 44 45
TkDown               : 36
TkDrop               : 25
TkElse               : 43
TkEnd                : 6 15 16 37 43 44 45
TkExecute            : 37
TkFalse              : 60
TkIdent              : 12 48
TkIf                 : 43 44
TkIgual              : 63
TkInt                : 9
TkLeft               : 33
TkMayor              : 64
TkMayorIgual         : 65
TkMe                 : 50
TkMenor              : 66
TkMenorIgual         : 67
TkMod                : 58
TkMult               : 56
TkNegacion           : 52
TkNum                : 47
TkOn                 : 15 16
TkParAbre            : 51
TkParCierra          : 51
TkPunto              : 22 23 24 25 26 27 28 29 30 31 32 40 41 42
TkRead               : 28 29
TkRecieve            : 31 32
TkResta              : 53 55
TkRight              : 34
TkSend               : 30
TkStore              : 22
TkSuma               : 54
TkTrue               : 59
TkUp                 : 35
TkWhile              : 45
error                : 

Nonterminals, with rules where they appear

COMP                 : 13
COMP_LIST            : 6 13
DEC                  : 4 5
DEC_LIST             : 3 4
DEC_LIST_INIT        : 1
DIR                  : 26 27
EXPR                 : 15 22 25 27 32 43 44 45 51 52 53 54 54 55 55 56 56 57 57 58 58 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68
ID                   : 10 11 24 29
ID_LIST              : 6 10 40 41 42
INST_BOT             : 20 21
INST_BOT_LIST        : 15 16 20
INST_CONT            : 38 39
INST_CONT_LIST       : 37 38 43 43 44 45
INST_EXE             : 1 2
PROGRAM              : 46 0
STATE                : 16
TIPO                 : 6
empty                : 14

Parsing method: LALR

state 0

    (0) S' -> . PROGRAM
    (1) PROGRAM -> . DEC_LIST_INIT INST_EXE
    (2) PROGRAM -> . INST_EXE
    (3) DEC_LIST_INIT -> . TkCreate DEC_LIST
    (37) INST_EXE -> . TkExecute INST_CONT_LIST TkEnd

    TkCreate        shift and go to state 1
    TkExecute       shift and go to state 3

    PROGRAM                        shift and go to state 2
    INST_EXE                       shift and go to state 5
    DEC_LIST_INIT                  shift and go to state 4

state 1

    (3) DEC_LIST_INIT -> TkCreate . DEC_LIST
    (4) DEC_LIST -> . DEC DEC_LIST
    (5) DEC_LIST -> . DEC
    (6) DEC -> . TIPO TkBot ID_LIST COMP_LIST TkEnd
    (7) TIPO -> . TkBool
    (8) TIPO -> . TkChar
    (9) TIPO -> . TkInt

    TkBool          shift and go to state 7
    TkChar          shift and go to state 11
    TkInt           shift and go to state 6

    DEC_LIST                       shift and go to state 8
    TIPO                           shift and go to state 10
    DEC                            shift and go to state 9

state 2

    (0) S' -> PROGRAM .



state 3

    (37) INST_EXE -> TkExecute . INST_CONT_LIST TkEnd
    (38) INST_CONT_LIST -> . INST_CONT INST_CONT_LIST
    (39) INST_CONT_LIST -> . INST_CONT
    (40) INST_CONT -> . TkActivate ID_LIST TkPunto
    (41) INST_CONT -> . TkAdvance ID_LIST TkPunto
    (42) INST_CONT -> . TkDeactivate ID_LIST TkPunto
    (43) INST_CONT -> . TkIf EXPR TkDosPuntos INST_CONT_LIST TkElse TkDosPuntos INST_CONT_LIST TkEnd
    (44) INST_CONT -> . TkIf EXPR TkDosPuntos INST_CONT_LIST TkEnd
    (45) INST_CONT -> . TkWhile EXPR TkDosPuntos INST_CONT_LIST TkEnd
    (46) INST_CONT -> . PROGRAM
    (1) PROGRAM -> . DEC_LIST_INIT INST_EXE
    (2) PROGRAM -> . INST_EXE
    (3) DEC_LIST_INIT -> . TkCreate DEC_LIST
    (37) INST_EXE -> . TkExecute INST_CONT_LIST TkEnd

    TkActivate      shift and go to state 13
    TkAdvance       shift and go to state 14
    TkDeactivate    shift and go to state 12
    TkIf            shift and go to state 18
    TkWhile         shift and go to state 19
    TkCreate        shift and go to state 1
    TkExecute       shift and go to state 3

    INST_EXE                       shift and go to state 5
    INST_CONT                      shift and go to state 17
    PROGRAM                        shift and go to state 15
    DEC_LIST_INIT                  shift and go to state 4
    INST_CONT_LIST                 shift and go to state 16

state 4

    (1) PROGRAM -> DEC_LIST_INIT . INST_EXE
    (37) INST_EXE -> . TkExecute INST_CONT_LIST TkEnd

    TkExecute       shift and go to state 3

    INST_EXE                       shift and go to state 20

state 5

    (2) PROGRAM -> INST_EXE .

    $end            reduce using rule 2 (PROGRAM -> INST_EXE .)
    TkActivate      reduce using rule 2 (PROGRAM -> INST_EXE .)
    TkAdvance       reduce using rule 2 (PROGRAM -> INST_EXE .)
    TkDeactivate    reduce using rule 2 (PROGRAM -> INST_EXE .)
    TkIf            reduce using rule 2 (PROGRAM -> INST_EXE .)
    TkWhile         reduce using rule 2 (PROGRAM -> INST_EXE .)
    TkCreate        reduce using rule 2 (PROGRAM -> INST_EXE .)
    TkExecute       reduce using rule 2 (PROGRAM -> INST_EXE .)
    TkEnd           reduce using rule 2 (PROGRAM -> INST_EXE .)
    TkElse          reduce using rule 2 (PROGRAM -> INST_EXE .)


state 6

    (9) TIPO -> TkInt .

    TkBot           reduce using rule 9 (TIPO -> TkInt .)


state 7

    (7) TIPO -> TkBool .

    TkBot           reduce using rule 7 (TIPO -> TkBool .)


state 8

    (3) DEC_LIST_INIT -> TkCreate DEC_LIST .

    TkExecute       reduce using rule 3 (DEC_LIST_INIT -> TkCreate DEC_LIST .)


state 9

    (4) DEC_LIST -> DEC . DEC_LIST
    (5) DEC_LIST -> DEC .
    (4) DEC_LIST -> . DEC DEC_LIST
    (5) DEC_LIST -> . DEC
    (6) DEC -> . TIPO TkBot ID_LIST COMP_LIST TkEnd
    (7) TIPO -> . TkBool
    (8) TIPO -> . TkChar
    (9) TIPO -> . TkInt

    TkExecute       reduce using rule 5 (DEC_LIST -> DEC .)
    TkBool          shift and go to state 7
    TkChar          shift and go to state 11
    TkInt           shift and go to state 6

    DEC                            shift and go to state 9
    TIPO                           shift and go to state 10
    DEC_LIST                       shift and go to state 21

state 10

    (6) DEC -> TIPO . TkBot ID_LIST COMP_LIST TkEnd

    TkBot           shift and go to state 22


state 11

    (8) TIPO -> TkChar .

    TkBot           reduce using rule 8 (TIPO -> TkChar .)


state 12

    (42) INST_CONT -> TkDeactivate . ID_LIST TkPunto
    (10) ID_LIST -> . ID TkComa ID_LIST
    (11) ID_LIST -> . ID
    (12) ID -> . TkIdent

    TkIdent         shift and go to state 24

    ID                             shift and go to state 23
    ID_LIST                        shift and go to state 25

state 13

    (40) INST_CONT -> TkActivate . ID_LIST TkPunto
    (10) ID_LIST -> . ID TkComa ID_LIST
    (11) ID_LIST -> . ID
    (12) ID -> . TkIdent

    TkIdent         shift and go to state 24

    ID                             shift and go to state 23
    ID_LIST                        shift and go to state 26

state 14

    (41) INST_CONT -> TkAdvance . ID_LIST TkPunto
    (10) ID_LIST -> . ID TkComa ID_LIST
    (11) ID_LIST -> . ID
    (12) ID -> . TkIdent

    TkIdent         shift and go to state 24

    ID                             shift and go to state 23
    ID_LIST                        shift and go to state 27

state 15

    (46) INST_CONT -> PROGRAM .

    TkActivate      reduce using rule 46 (INST_CONT -> PROGRAM .)
    TkAdvance       reduce using rule 46 (INST_CONT -> PROGRAM .)
    TkDeactivate    reduce using rule 46 (INST_CONT -> PROGRAM .)
    TkIf            reduce using rule 46 (INST_CONT -> PROGRAM .)
    TkWhile         reduce using rule 46 (INST_CONT -> PROGRAM .)
    TkCreate        reduce using rule 46 (INST_CONT -> PROGRAM .)
    TkExecute       reduce using rule 46 (INST_CONT -> PROGRAM .)
    TkEnd           reduce using rule 46 (INST_CONT -> PROGRAM .)
    TkElse          reduce using rule 46 (INST_CONT -> PROGRAM .)


state 16

    (37) INST_EXE -> TkExecute INST_CONT_LIST . TkEnd

    TkEnd           shift and go to state 28


state 17

    (38) INST_CONT_LIST -> INST_CONT . INST_CONT_LIST
    (39) INST_CONT_LIST -> INST_CONT .
    (38) INST_CONT_LIST -> . INST_CONT INST_CONT_LIST
    (39) INST_CONT_LIST -> . INST_CONT
    (40) INST_CONT -> . TkActivate ID_LIST TkPunto
    (41) INST_CONT -> . TkAdvance ID_LIST TkPunto
    (42) INST_CONT -> . TkDeactivate ID_LIST TkPunto
    (43) INST_CONT -> . TkIf EXPR TkDosPuntos INST_CONT_LIST TkElse TkDosPuntos INST_CONT_LIST TkEnd
    (44) INST_CONT -> . TkIf EXPR TkDosPuntos INST_CONT_LIST TkEnd
    (45) INST_CONT -> . TkWhile EXPR TkDosPuntos INST_CONT_LIST TkEnd
    (46) INST_CONT -> . PROGRAM
    (1) PROGRAM -> . DEC_LIST_INIT INST_EXE
    (2) PROGRAM -> . INST_EXE
    (3) DEC_LIST_INIT -> . TkCreate DEC_LIST
    (37) INST_EXE -> . TkExecute INST_CONT_LIST TkEnd

    TkEnd           reduce using rule 39 (INST_CONT_LIST -> INST_CONT .)
    TkElse          reduce using rule 39 (INST_CONT_LIST -> INST_CONT .)
    TkActivate      shift and go to state 13
    TkAdvance       shift and go to state 14
    TkDeactivate    shift and go to state 12
    TkIf            shift and go to state 18
    TkWhile         shift and go to state 19
    TkCreate        shift and go to state 1
    TkExecute       shift and go to state 3

    INST_EXE                       shift and go to state 5
    INST_CONT                      shift and go to state 17
    PROGRAM                        shift and go to state 15
    DEC_LIST_INIT                  shift and go to state 4
    INST_CONT_LIST                 shift and go to state 29

state 18

    (43) INST_CONT -> TkIf . EXPR TkDosPuntos INST_CONT_LIST TkElse TkDosPuntos INST_CONT_LIST TkEnd
    (44) INST_CONT -> TkIf . EXPR TkDosPuntos INST_CONT_LIST TkEnd
    (47) EXPR -> . TkNum
    (48) EXPR -> . TkIdent
    (49) EXPR -> . TkCaracter
    (50) EXPR -> . TkMe
    (51) EXPR -> . TkParAbre EXPR TkParCierra
    (52) EXPR -> . TkNegacion EXPR
    (53) EXPR -> . TkResta EXPR
    (54) EXPR -> . EXPR TkSuma EXPR
    (55) EXPR -> . EXPR TkResta EXPR
    (56) EXPR -> . EXPR TkMult EXPR
    (57) EXPR -> . EXPR TkDiv EXPR
    (58) EXPR -> . EXPR TkMod EXPR
    (59) EXPR -> . TkTrue
    (60) EXPR -> . TkFalse
    (61) EXPR -> . EXPR TkConjuncion EXPR
    (62) EXPR -> . EXPR TkDisyuncion EXPR
    (63) EXPR -> . EXPR TkIgual EXPR
    (64) EXPR -> . EXPR TkMayor EXPR
    (65) EXPR -> . EXPR TkMayorIgual EXPR
    (66) EXPR -> . EXPR TkMenor EXPR
    (67) EXPR -> . EXPR TkMenorIgual EXPR
    (68) EXPR -> . EXPR TkDistinto EXPR

    TkNum           shift and go to state 31
    TkIdent         shift and go to state 33
    TkCaracter      shift and go to state 39
    TkMe            shift and go to state 34
    TkParAbre       shift and go to state 35
    TkNegacion      shift and go to state 38
    TkResta         shift and go to state 32
    TkTrue          shift and go to state 37
    TkFalse         shift and go to state 36

    EXPR                           shift and go to state 30

state 19

    (45) INST_CONT -> TkWhile . EXPR TkDosPuntos INST_CONT_LIST TkEnd
    (47) EXPR -> . TkNum
    (48) EXPR -> . TkIdent
    (49) EXPR -> . TkCaracter
    (50) EXPR -> . TkMe
    (51) EXPR -> . TkParAbre EXPR TkParCierra
    (52) EXPR -> . TkNegacion EXPR
    (53) EXPR -> . TkResta EXPR
    (54) EXPR -> . EXPR TkSuma EXPR
    (55) EXPR -> . EXPR TkResta EXPR
    (56) EXPR -> . EXPR TkMult EXPR
    (57) EXPR -> . EXPR TkDiv EXPR
    (58) EXPR -> . EXPR TkMod EXPR
    (59) EXPR -> . TkTrue
    (60) EXPR -> . TkFalse
    (61) EXPR -> . EXPR TkConjuncion EXPR
    (62) EXPR -> . EXPR TkDisyuncion EXPR
    (63) EXPR -> . EXPR TkIgual EXPR
    (64) EXPR -> . EXPR TkMayor EXPR
    (65) EXPR -> . EXPR TkMayorIgual EXPR
    (66) EXPR -> . EXPR TkMenor EXPR
    (67) EXPR -> . EXPR TkMenorIgual EXPR
    (68) EXPR -> . EXPR TkDistinto EXPR

    TkNum           shift and go to state 31
    TkIdent         shift and go to state 33
    TkCaracter      shift and go to state 39
    TkMe            shift and go to state 34
    TkParAbre       shift and go to state 35
    TkNegacion      shift and go to state 38
    TkResta         shift and go to state 32
    TkTrue          shift and go to state 37
    TkFalse         shift and go to state 36

    EXPR                           shift and go to state 40

state 20

    (1) PROGRAM -> DEC_LIST_INIT INST_EXE .

    $end            reduce using rule 1 (PROGRAM -> DEC_LIST_INIT INST_EXE .)
    TkActivate      reduce using rule 1 (PROGRAM -> DEC_LIST_INIT INST_EXE .)
    TkAdvance       reduce using rule 1 (PROGRAM -> DEC_LIST_INIT INST_EXE .)
    TkDeactivate    reduce using rule 1 (PROGRAM -> DEC_LIST_INIT INST_EXE .)
    TkIf            reduce using rule 1 (PROGRAM -> DEC_LIST_INIT INST_EXE .)
    TkWhile         reduce using rule 1 (PROGRAM -> DEC_LIST_INIT INST_EXE .)
    TkCreate        reduce using rule 1 (PROGRAM -> DEC_LIST_INIT INST_EXE .)
    TkExecute       reduce using rule 1 (PROGRAM -> DEC_LIST_INIT INST_EXE .)
    TkEnd           reduce using rule 1 (PROGRAM -> DEC_LIST_INIT INST_EXE .)
    TkElse          reduce using rule 1 (PROGRAM -> DEC_LIST_INIT INST_EXE .)


state 21

    (4) DEC_LIST -> DEC DEC_LIST .

    TkExecute       reduce using rule 4 (DEC_LIST -> DEC DEC_LIST .)


state 22

    (6) DEC -> TIPO TkBot . ID_LIST COMP_LIST TkEnd
    (10) ID_LIST -> . ID TkComa ID_LIST
    (11) ID_LIST -> . ID
    (12) ID -> . TkIdent

    TkIdent         shift and go to state 24

    ID                             shift and go to state 23
    ID_LIST                        shift and go to state 41

state 23

    (10) ID_LIST -> ID . TkComa ID_LIST
    (11) ID_LIST -> ID .

    TkComa          shift and go to state 42
    TkPunto         reduce using rule 11 (ID_LIST -> ID .)
    TkOn            reduce using rule 11 (ID_LIST -> ID .)
    TkEnd           reduce using rule 11 (ID_LIST -> ID .)


state 24

    (12) ID -> TkIdent .

    TkPunto         reduce using rule 12 (ID -> TkIdent .)
    TkComa          reduce using rule 12 (ID -> TkIdent .)
    TkOn            reduce using rule 12 (ID -> TkIdent .)
    TkEnd           reduce using rule 12 (ID -> TkIdent .)


state 25

    (42) INST_CONT -> TkDeactivate ID_LIST . TkPunto

    TkPunto         shift and go to state 43


state 26

    (40) INST_CONT -> TkActivate ID_LIST . TkPunto

    TkPunto         shift and go to state 44


state 27

    (41) INST_CONT -> TkAdvance ID_LIST . TkPunto

    TkPunto         shift and go to state 45


state 28

    (37) INST_EXE -> TkExecute INST_CONT_LIST TkEnd .
